--- a/library-app/src/main/resources/application.properties
+++ b/library-app/src/main/resources/application.properties
@@ -1,6 +1,3 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/spring
-spring.datasource.username=spring
-spring.datasource.password=spring
+spring.datasource.url=jdbc:h2:mem:testdb
 
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.generate-ddl=true
+spring.h2.console.enabled=true
