Introduction to spring security

--- a/library-app/src/main/resources/application.properties
+++ b/library-app/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.h2.console.enabled=true
 spring.jpa.generate-ddl=true
 
 spring.jpa.show-sql=true
+
+spring.security.user.name=admin
+spring.security.user.password=password
+
+logging.level.org.springframework.security=trace
